--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serenity = "0.10.4"
+
+[dependencies.tokio]
+version = "1.3.0"
+features = ["macros", "rt-multi-thread"]
